# rustureng

./: .cz.toml  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.nix  Cargo.toml  README.md  compare.sh  fetch.ts  flake.nix
.github/: FUNDING.yml
.github/assets/: demo.tape
.github/workflows/: bump.yml
comparison/: README.md  compare.sh  fetch.ts
src/: err.rs  lib.rs  main.rs  parser.rs  retriever.rs  retriever_isahc.rs  retriever_reqwest.rs  retriever_ureq.rs
