[package]
name = "rustureng"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
dialoguer = "0.11.0"
scraper = "0.23.1"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.4"

ureq = { version = "3.0.11", optional = true }
isahc = { version = "1.7.2", optional = true }
reqwest = { version = "0.12.15", optional = true }

[features]
default = ["ureq"]
ureq = ["dep:ureq"]
isahc = ["dep:isahc"]
reqwest = ["dep:reqwest"]
