[package]
name = "rustureng"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.4"
dialoguer = "0.12.0"
scraper = "0.25.0"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
url = "2.5.8"

ureq = { version = "3.2.0", optional = true }
isahc = { version = "1.7.2", optional = true }
reqwest = { version = "0.13.2", optional = true }

[features]
default = ["ureq"]
ureq = ["dep:ureq"]
isahc = ["dep:isahc"]
reqwest = ["dep:reqwest"]
